@@ -10,7 +10,7 @@
 	<div class="logo"></div>
 	<div class="leader">
 		<div class="product">[%- product -%]</div>
-		<div class="edition">[%- edition -%]</div>
+		<div class="version">[%- version -%]</div>
 	</div>
 	<div class="docname">[%- docname -%]</div>
 	<div class="subtitle">[%- subtitle -%]</div>
