@@ -51,7 +51,7 @@ body.cover div.product {
 }
 
 
-body.cover div.edition {
+body.cover div.version {
 	display: inline;
 }
 
