@@ -3,6 +3,8 @@
   - Fix broken mr-IN/Conventions.po. BZ #908956
   - Fix footnote link unclickable. BZ #909006
   - Fix missing translations for common files. BZ #908976
+  - Fix using edition for version on cover pages. BZ #912180
+  - Fix nested entities causing XML::TreeBuilder to fail. BZ #912187
 
 3.1.1 Thu Feb 07 2013
   - Fix web site CSS for admonitions breaking layout for books built on P3.0. BZ #908539
